--- a/app/index.html
+++ b/app/index.html
@@ -14,22 +14,31 @@
 </head>
 
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li>
-          <a href="#our-beginning">Our Beginning</a>
-        </li>
-        <li>
-          <a href="#features">Features</a>
-        </li>
-        <li>
-          <a href="#testimonials">Testimonials</a>
-        </li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
+      </div>
+      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-content">
+        <div class="site-header__btn-container">
+          <a href="#" class="btn">Get in Touch</a>
+        </div>
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li>
+              <a href="#our-beginning">Our Beginning</a>
+            </li>
+            <li>
+              <a href="#features">Features</a>
+            </li>
+            <li>
+              <a href="#testimonials">Testimonials</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </header>
 
   <div class="large-hero">
@@ -146,7 +155,8 @@
 
       <h2 class="section-title section-title--blue">
         <span class="icon icon--comment section-title__icon"></span>
-        Real <strong>Testimonials</strong>
+        Real
+        <strong>Testimonials</strong>
       </h2>
 
       <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container">
@@ -195,7 +205,8 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span>
+      <p>
+        <span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span>
         <a href="#" class="btn btn--orange">Get in Touch</a>
       </p>
     </div>
